--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --static-watch",
+    "start": "nodemon server",
     "build": "webpack"
   },
   "author": "",
